fix: faded text contrast

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
 $light-gray: #ccc;
 $dark-glass: fade-out(#000, 0.9);
-$extra-dark-glass: fade-out(#000, 0.5);
+$extra-dark-glass: fade-out(#000, 0.25);
 $light-glass: fade-out(#fff, 0.7);
 
 $red-ish: HSL(0, 80%, 70%);
